🪶 Landing: index.html inscribed with VC ledger and ascension hooks
🪶 Landing: index.html inscribed with VC ledger and ascension hooks

--- a/index/.html
+++ b/index/.html
@@ -1,3 +1,5 @@
+Action: Client-facing entry with sovereign language and data wiring hooks.
+
 cat > apps/landing/index.html << 'EOF'
 <!doctype html>
 <html lang="en">
