--- a/apps/watcher/dashboard.html
+++ b/apps/watcher/dashboard.html
@@ -7,7 +7,14 @@
 </head>
 <body>
   <h1>📡 Sovereign Watcher</h1>
+
   <div id="metrics"></div>
   <script src="watcher.js"></script>
+
+  <hr />
+
+  <h2>📘 VC001 Legacy Codex</h2>
+  <div id="codex" class="scroll-viewer"></div>
+  <script src="viewerCodex.js"></script>
 </body>
 </html>
