--- a/apps/watcher/dashboard.html
+++ b/apps/watcher/dashboard.html
@@ -16,5 +16,11 @@
   <h2>📘 VC001 Legacy Codex</h2>
   <div id="codex" class="scroll-viewer"></div>
   <script src="viewerCodex.js"></script>
+
+  <hr />
+
+  <h2>🪙 Contributor Glyphs</h2>
+  <div id="glyphs" class="scroll-viewer"></div>
+  <script src="viewerGlyphs.js"></script>
 </body>
 </html>
